2022-02-24  Martin Robinson  <mrobinson@webkit.org>

        Implement logical properties for CSS overscroll-behavior
        https://bugs.webkit.org/show_bug.cgi?id=237080

        Reviewed by Simon Fraser.

        * web-platform-tests/css/css-overscroll-behavior/inheritance-expected.txt: Update expectations for passing tests.
        * web-platform-tests/css/css-overscroll-behavior/overscroll-behavior-logical-expected.txt: Ditto.
        * web-platform-tests/css/css-overscroll-behavior/parsing/overscroll-behavior-computed-expected.txt: Ditto.
        * web-platform-tests/css/css-overscroll-behavior/parsing/overscroll-behavior-valid-expected.txt: Ditto.

2022-02-23  Antti Koivisto  <antti@apple.com>

        [CSS Container Queries] offsetWidth/Height and similar should update layout for container queries
        https://bugs.webkit.org/show_bug.cgi?id=237079

        Reviewed by Simon Fraser.

        * web-platform-tests/css/css-contain/container-queries/auto-scrollbars-expected.txt:
        * web-platform-tests/css/css-contain/container-queries/inline-size-containment-expected.txt:
        * web-platform-tests/css/css-contain/container-queries/inline-size-containment-vertical-rl-expected.txt:
        * web-platform-tests/css/css-contain/container-queries/transition-scrollbars-expected.txt:

2022-02-22  Antti Koivisto  <antti@apple.com>

        [CSS container Queries] getComputedStyle should update style for invalid query containers
        https://bugs.webkit.org/show_bug.cgi?id=237038

        Reviewed by Darin Adler.

        * web-platform-tests/css/css-contain/container-queries/animation-container-size-expected.txt:
        * web-platform-tests/css/css-contain/container-queries/animation-container-type-dynamic-expected.txt:
        * web-platform-tests/css/css-contain/container-queries/animation-nested-animation-expected.txt:
        * web-platform-tests/css/css-contain/container-queries/animation-nested-transition-expected.txt: