@@ -1,3 +1,9 @@
+2022-02-24  Chris Dumez  <cdumez@apple.com>
+
+        Unreviewed, add some logging to imported/w3c/web-platform-tests/workers/semantics/multiple-workers/004.html to debug flakiness
+
+        * web-platform-tests/workers/semantics/multiple-workers/004.html:
+
 2022-02-24  Martin Robinson  <mrobinson@webkit.org>
 
         Implement logical properties for CSS overscroll-behavior
